# Solevoy_trip_raspisania_dont_read_please

./: .gitignore  .~lock.бассейн.csv#  ANALYSIS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  TECHNICAL.md  bot_main.py  cli.py  config.yaml  main.py  main_api.py  main_new.py  pyproject.toml  pytest.ini  requirements.txt  run.py  script.py  sw.py  test_bot.py  todo.txt  week_days.py  бассейн.csv
Drafts/: sch.py  script_v2.py  С_1_МПФ_АБ_101.csv  С_1_МПФ_АБ_102.csv  С_1_МПФ_АБ_103.csv  С_1_МПФ_АБ_104.csv  С_1_МПФ_АБ_105.csv  С_1_МПФ_АБ_106.csv  С_1_МПФ_АБ_107.csv
ai_docs/: CODESTYLE.md  bot_architecture.md  bot_ux_design.md  extended_bot_ux.md  interaction_rules.md  modular_structure.md  szgmu_academic_analysis.md  szgmu_regulations_summary.md  todo.txt
ai_docs/from_user/: 1723-О от 2022.txt  251-О от 2025.txt  Положение о пром_аттестации_2025.txt  Приказ_№_408_О_от_28_02_2025_Об_утверждении_Положения_о_промежуточной.txt
app/bot/: main.py  (+5 more)
bot/: bot.py
docs/: group_search_and_reports_plan.md  invitation_system_plan.md  payment_system_plan.md
input/: Л_1_МПФ_АБ.csv  Л_2_СФ_NN1.csv  С_1_МПФ_АБ_101.csv  С_1_МПФ_АБ_102.csv  С_1_МПФ_АБ_103.csv  С_1_МПФ_АБ_104.csv  С_1_МПФ_АБ_105.csv  С_1_МПФ_АБ_106.csv  С_1_МПФ_АБ_107.csv
legacy/: bot_main.py  main.py  script.py
output/: 1_МПФ_101.ics  1_МПФ_101.xlsx  1_МПФ_102.ics  1_МПФ_102.xlsx  1_МПФ_103.ics  1_МПФ_103.xlsx  1_МПФ_104.ics  1_МПФ_104.xlsx  1_МПФ_105.ics  1_МПФ_105.xlsx  1_МПФ_106.ics  1_МПФ_106.xlsx  1_МПФ_107.ics  1_МПФ_107.xlsx  202б.ics  202б.xlsx  232б.ics  232б.xlsx  2_ЛФ_241.ics  2_ЛФ_241.xlsx  2_СФ_222.ics  2_СФ_222.xlsx
schedule_processor/: __init__.py  api.py  config.py  core.py  diary.py  disclaimer.py  group_search.py  models.py  semester_detector.py  student_profile.py
tests/: __init__.py  conftest.py  test_basic_functionality.py
v2/: script_v2.py
v3/: config.py  get_filters.py  get_id.py  get_raw.py  main.py  post_lesson.py  processing.py  xlsx.py
(+89 files in other folders)
